karnc/tests/fixtures/negative/227_sum_non_exhaustive_match/src/demo.karn
context demo

type UserId = String where NonEmpty

actor User { auth = Bearer(secret = "S"), identity = UserId }

service api from http {
  on GET("/x") by who: User | Visitor () -> Effect[HttpResult[String]] {
    match who {
      User(u) => Ok(u)
    }
  }
}
